@startuml modelo-datos
title Modelo de datos (simplificado) - JEM Store

skinparam backgroundColor #FFFFFF
hide circle

entity "users" as users {
  * id
  --
  name
  email
  password
  is_admin
}

entity "categories" as categories {
  * id
  --
  parent_id (FK, nullable)
  name
  slug
}

entity "products" as products {
  * id
  --
  category_id (FK)
  name
  slug
  price
  sale_price (nullable)
  stock
  audience
  image (nullable)
  active
}

entity "orders" as orders {
  * id
  --
  user_id (FK)
  order_number
  tracking_number
  subtotal / tax / shipping / total
  payment_method / payment_status
  payment_gateway / payment_environment
  status
  shipping_name / email / phone / address
}

entity "order_items" as order_items {
  * id
  --
  order_id (FK)
  product_id (FK, nullable)
  product_name
  unit_price
  quantity
  subtotal
}

categories ||--o{ categories : "parent_id"
categories ||--o{ products : "category_id"
users ||--o{ orders : "user_id"
orders ||--o{ order_items : "order_id"
products ||--o{ order_items : "product_id"

@enduml
